--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/build 7.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build 7.data.gz",
-        frameworkUrl: buildUrl + "/build 7.framework.js.gz",
-        codeUrl: buildUrl + "/build 7.wasm.gz",
+        dataUrl: buildUrl + "/build 7.data",
+        frameworkUrl: buildUrl + "/build 7.framework.js",
+        codeUrl: buildUrl + "/build 7.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "metacurse",
